--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <div id="app"></div>
     
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
