--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <div id="app"></div>
     
-    <script src="index.js" type="module"></script>
+    
+    <script src="modules/view.js"></script>
+    <script src="modules/search.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
