--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <script src="modules/view.js"></script>
     <script src="modules/search.js"></script>
+    <script src="modules/api.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
