--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="modules/view.js"></script>
     <script src="modules/search.js"></script>
     <script src="modules/api.js"></script>
+    <script src="modules/log.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
